--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "This app is for test purposes only, nothing else",
   "type": "module",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node backend/server.js",
@@ -24,14 +25,15 @@
   "homepage": "https://github.com/blckclov3r/YoutubeClone#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "concurrently": "^7.3.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.6",
-    "nodemon": "^2.0.19",
-    "path": "^0.12.7"
+    "nodemon": "^2.0.19"
+  },
+  "devDependencies": {
+    "concurrently": "^7.3.0"
   }
 }
