--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://127.0.0.1:8000/api/",
+  "proxy": "http://127.0.0.1:8000/api",
   "name": "video_app",
   "version": "0.1.1",
   "private": true,
